[package]
name = "calculator-rust"
version = "0.1.0"
edition = "2021"
authors = ["mxwlc"]
build = "build.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.19.9"
lalrpop-util = "0.19.9"
regex = "1"

[build-dependencies]
lalrpop = "0.19.9"

[[bin]]
name = "calculator"
path = "src/main.rs"